--- a/views/adm/lancamentos.ejs
+++ b/views/adm/lancamentos.ejs
@@ -194,6 +194,11 @@
             </div>
             <!-- END PAGE CONTENT-->
             <%- include('./../partials/footer.ejs') %>
+			
+			<!-- MODAL PROFILE -->
+		<%- include('./../partials/modal_cadastrar_usuarios.ejs') %>
+	<!-- FIM MODAL PROFILE -->
+
         </div>
     </div>
 	
