--- a/views/adm/produtos.ejs
+++ b/views/adm/produtos.ejs
@@ -147,8 +147,12 @@
         </div>
     </div>
 	<!-- MODAL NOVIDADE-->
-		<%- include('./../partials/modal_cadastrar_produtos.ejs') %>
+		
 	<!-- FIM MODAL NOVIDADE-->
+	<!-- MODAL PROFILE -->
+		<%- include('./../partials/modal_cadastrar_usuarios.ejs') %>
+	<!-- FIM MODAL PROFILE -->
+
     <!-- BEGIN PAGA BACKDROPS-->
     <div class="sidenav-backdrop backdrop"></div>
     <div class="preloader-backdrop">
